--- a/project/html/pages/index.ejs
+++ b/project/html/pages/index.ejs
@@ -9,7 +9,8 @@
   <div class="page-header">
 
   
-    <h1>Hello World !</h1>
+    <h1>Hello Melissa !</h1>
+    <h2>This is a web app to say Hello to you !!!</h2>
   </div>
 
   <p>Click on the button for a surprise.</p>
