--- a/project/html/pages/projects.ejs
+++ b/project/html/pages/projects.ejs
@@ -7,6 +7,7 @@
   <!-- the classes 'page-header' and 'btn btn-dark' create bootstrap components.  -->
   <!-- Check out more components here: http://getbootstrap.com/components/ -->
   <div class="page-header">
+    <% include ../helpers/navbar %>
     <h1>Projects</h1>
   </div>
 
